fix: Adjust button font size for improved readability

--- a/werkstuk/frontend/applicatie/src/assets/css/general.css
+++ b/werkstuk/frontend/applicatie/src/assets/css/general.css
@@ -119,7 +119,7 @@ ul {
         margin: 0 auto;
     }
     .btn {
-        font-size: 1.1rem;
+        font-size: 1.12rem;
         font-weight: 600;
     }
   }
